Application  can be built using fxml files(i guess)